--- a/css/cover.css
+++ b/css/cover.css
@@ -28,6 +28,9 @@ html,
 body {
   height: 100%;
   background-color: #333;
+  background-image: url('../img/bg.png');
+  background-repeat: no-repeat;
+
 }
 body {
   color: #fff;
@@ -69,12 +72,13 @@ body {
 
 .masthead-brand {
   margin-bottom: 0;
+  text-align:center;
 }
 
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: bold;
-  color: rgba(255,255,255,.5);
+  color: rgba(255,255,255,1);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
@@ -82,6 +86,15 @@ body {
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
   border-bottom-color: rgba(255,255,255,.25);
+}
+
+.nav-masthead .nav-link .nav-link-word {
+   visibility:hidden;
+}
+
+.nav-masthead .nav-link:hover .nav-link-word,
+.nav-masthead .nav-link:focus .nav-link-word {
+   visibility:visible;
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -101,6 +114,18 @@ body {
     float: right;
   }
 }
+
+.center-block {
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+}
+
+.social-button {
+  max-width:36px;
+  max-height:36px;
+}
+
 
 
 /*
