--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,13 @@
 
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- FontAwesome stuff -->
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="static/font-awesome-4.7.0/css/font-awesome.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="css/cover.css" rel="stylesheet">
+    <link href="static/css/cover.css" rel="stylesheet">
   </head>
 
   <body>
@@ -31,7 +31,7 @@
             <div class="inner">
               <h4 class="masthead-brand"><a href="tel:1-570-296-8094">(570) 296-8094</a></h4>
               <nav class="nav nav-masthead">
-                <a class="nav-link" href="menus/current.pdf">
+                <a class="nav-link" href="static/menus/current.pdf">
                   <div><i class="fa fa-file fa-2x" aria-hidden="true"></i></div>
                   <div class="nav-link-word">menus</div>
                 </a>
@@ -40,11 +40,11 @@
                   <div class="nav-link-word">directions</div>
                </a>
                 <a class="nav-link" href="http://www.facebook.com/forktl">
-                  <div><img src="img/facebook-white.png" class="social-button"/></div>
+                  <div><img src="static/img/facebook-white.png" class="social-button"/></div>
                   <div class="nav-link-word">facebook</div>
                 </a>
                 <a class="nav-link" href="http://www.instagram.com/theforktl/">
-                  <div><img src="img/instagram-glyph-white.png" class="social-button"/></div>
+                  <div><img src="static/img/instagram-glyph-white.png" class="social-button"/></div>
                   <div class="nav-link-word">instagram</div>
                 </a>
               </nav>
@@ -53,26 +53,20 @@
 
           <div class="inner cover">
             <div class="row">
-               <img class="center-block" src="img/the-fork.png"/>
+               <img class="center-block" src="static/img/the-fork.png"/>
             </div>
             <div class="row">
-               <img class="center-block" src="img/at.png"/>
+               <img class="center-block" src="static/img/at.png"/>
             </div>
             <div class="row">
-               <img class="center-block"src="img/twin-lakes.png"/>
+               <img class="center-block"src="static/img/twin-lakes.png"/>
             </div>
             <div class="row">
-               <img class="center-block" src="img/fork-logo.png"/>
+               <img class="center-block" src="static/img/fork-logo.png"/>
             </div>
                <p class="lead">
-                  Since 1986, <em>The Fork at Twin Lakes</em> has been serving exceptional 
-                  fare to northeastern Pennsylvania. <em>James Beard House</em> 
-                  honored <b>Chef Peter</b> focuses on the execution of his 
-                  culinary arts while <b>Sharon</b> provides hospitality with 
-                  the panache of a seasoned ma&#238;tre d'. Together they create fresh, 
-                  seasonal, market-driven menus of accessible, delightful cuisine.
-               </p>
                   <h4>Open Thursday through Sunday, 6 to 10 pm.</h4>
+               </p>
           </div>
 
           <div class="mastfoot">
@@ -91,12 +85,12 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="static/js/jquery.min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <!-- <script src="js/bootstrap.min.js"></script> -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
+    <script src="static/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
