--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -28,7 +28,7 @@ html,
 body {
   height: 100%;
   background-color: #333;
-  background-image: url('../img/bg.png');
+  background-image: url('../img/bg.jpg');
   background-repeat: no-repeat;
 
 }
