--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>The Fork at Twin Lakes</title>
 
 
     <!-- Bootstrap core CSS -->
@@ -29,23 +29,27 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h4 class="masthead-brand"><a href="tel:1-570-296-8094">(570) 296-8094</a></h4>
+              <!-- <h4 class="masthead-brand"><a href="tel:1-570-296-8094">(570) 296-8094</a></h4> -->
               <nav class="nav nav-masthead">
                 <a class="nav-link" href="static/menus/current.pdf">
                   <div><i class="fa fa-file fa-2x" aria-hidden="true"></i></div>
-                  <div class="nav-link-word">menus</div>
+                  <div>menus</div>
                 </a>
                 <a class="nav-link" href="https://goo.gl/maps/R2Di3JfENwP2">
                   <div><i class="fa fa-map fa-2x" aria-hidden="true"></i></div>
-                  <div class="nav-link-word">directions</div>
+                  <div>directions</div>
                </a>
                 <a class="nav-link" href="http://www.facebook.com/forktl">
-                  <div><img src="static/img/facebook-white.png" class="social-button"/></div>
+                  <div><img src="static/img/facebook-white-36.png" class="social-button"/></div>
                   <div class="nav-link-word">facebook</div>
                 </a>
                 <a class="nav-link" href="http://www.instagram.com/theforktl/">
-                  <div><img src="static/img/instagram-glyph-white.png" class="social-button"/></div>
+                  <div><img src="static/img/instagram-glyph-white-36.png" class="social-button"/></div>
                   <div class="nav-link-word">instagram</div>
+                </a>
+                <a class="nav-link" href="http://twitter.com/forktl">
+                  <div><img src="static/img/twitter-square-white-36.png" class="social-button"/></div>
+                  <div class="nav-link-word">twitter</div>
                 </a>
               </nav>
             </div>
@@ -53,16 +57,16 @@
 
           <div class="inner cover">
             <div class="row">
-               <img class="center-block" src="static/img/the-fork.png"/>
+               <img class="center-block logo" src="static/img/the-fork.png"/>
             </div>
             <div class="row">
-               <img class="center-block" src="static/img/at.png"/>
+               <img class="center-block logo" src="static/img/at.png"/>
             </div>
             <div class="row">
-               <img class="center-block"src="static/img/twin-lakes.png"/>
+               <img class="center-block logo"src="static/img/twin-lakes.png"/>
             </div>
             <div class="row">
-               <img class="center-block" src="static/img/fork-logo.png"/>
+               <img class="center-block logo" src="static/img/fork-logo.png"/>
             </div>
                <p class="lead">
                   <h4>Open Thursday through Sunday, 6 to 10 pm.</h4>
@@ -72,6 +76,8 @@
           <div class="mastfoot">
             <div class="inner">
               <p>Along a winding country road.</p>
+              <p>814 Twin Lakes Road, Shohola, Pennsylvania, 18458</p>
+              <p>(570) 296-8094</p>
             </div>
           </div>
 
