--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -72,7 +72,6 @@ body {
 
 .masthead-brand {
   margin-bottom: 0;
-  text-align:center;
 }
 
 .nav-masthead .nav-link {
@@ -112,14 +111,20 @@ body {
   }
   .nav-masthead {
     float: right;
+
   }
 }
 
 .center-block {
-   display: block;
+   display: inline-block;
    margin-left: auto;
    margin-right: auto;
 }
+
+.logo {
+   height: auto;
+}
+
 
 .social-button {
   max-width:36px;
