--- a/templates/index.html
+++ b/templates/index.html
@@ -33,40 +33,40 @@
               <nav class="nav nav-masthead">
                 <a class="nav-link" href="static/menus/current.pdf">
                   <div><i class="fa fa-file fa-2x" aria-hidden="true"></i></div>
-                  <div>menus</div>
+                  <div class="nav-link-word">menus</div>
                 </a>
                 <a class="nav-link" href="https://goo.gl/maps/R2Di3JfENwP2">
                   <div><i class="fa fa-map fa-2x" aria-hidden="true"></i></div>
-                  <div>directions</div>
+                  <div class="nav-link-word">directions</div>
                </a>
                 <a class="nav-link" href="http://www.facebook.com/forktl">
                   <div><img src="static/img/facebook-white-36.png" class="social-button"/></div>
-                  <div class="nav-link-word">facebook</div>
+                  <div class="nav-link-word nav-link-word-dis">facebook</div>
                 </a>
                 <a class="nav-link" href="http://www.instagram.com/theforktl/">
                   <div><img src="static/img/instagram-glyph-white-36.png" class="social-button"/></div>
-                  <div class="nav-link-word">instagram</div>
+                  <div class="nav-link-word nav-link-word-dis">instagram</div>
                 </a>
                 <a class="nav-link" href="http://twitter.com/forktl">
                   <div><img src="static/img/twitter-square-white-36.png" class="social-button"/></div>
-                  <div class="nav-link-word">twitter</div>
+                  <div class="nav-link-word nav-link-word-dis">twitter</div>
                 </a>
               </nav>
             </div>
           </div>
 
-          <div class="inner cover">
+          <div class="inner cover container-fluid">
             <div class="row">
-               <img class="center-block logo" src="static/img/the-fork.png"/>
+               <img class="center-block img-fluid logo" src="static/img/the-fork.png"/>
             </div>
             <div class="row">
-               <img class="center-block logo" src="static/img/at.png"/>
+               <img class="center-block img-fluid logo" src="static/img/at.png"/>
             </div>
             <div class="row">
-               <img class="center-block logo"src="static/img/twin-lakes.png"/>
+               <img class="center-block img-fluid logo" src="static/img/twin-lakes.png"/>
             </div>
             <div class="row">
-               <img class="center-block logo" src="static/img/fork-logo.png"/>
+               <img class="center-block img-fluid logo" src="static/img/fork-logo.png"/>
             </div>
                <p class="lead">
                   <h4>Open Thursday through Sunday, 6 to 10 pm.</h4>
