--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -28,9 +28,12 @@ html,
 body {
   height: 100%;
   background-color: #333;
-  background-image: url('../img/bg.jpg');
+  background-image: url('../img/diningroom.jpg');
+  background-position: center center;
   background-repeat: no-repeat;
-
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
 }
 body {
   color: #fff;
