--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -24,15 +24,23 @@ a:hover {
  * Base structure
  */
 
+
 html,
 body {
   height: 100%;
+}
+body {
   background-image: url('../img/diningroom.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-color: #464646;
+  -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,1);
+          box-shadow: inset 0 0 5rem rgba(0,0,0,1);
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -41,11 +49,6 @@ body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
-  -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
-          box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
 }
 .site-wrapper-inner {
   display: table-cell;
