--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -40,6 +40,10 @@ body {
   text-align: center;
   text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
 }
+/* body { padding-top: 40px;  } */
+/* @media screen and (max-width: 768px) { */
+/*   body { padding-top: 0px;  } */
+/* } */
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
@@ -89,7 +93,7 @@ body {
   border-bottom-color: rgba(255,255,255,1);
 }
 
-.nav-masthead .nav-link {
+.nav-link {
   padding: .25rem 0;
   font-weight: bold;
   color: rgba(255,255,255,1);
@@ -98,25 +102,26 @@ body {
   border-bottom-color: rgba(255,255,255,.33);
 }
 
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
+.nav-link:hover,
+.nav-link:focus {
   border-bottom-color: rgba(255,255,255,1);
 }
 
-.nav-masthead .nav-link .nav-link-word-dis {
+.nav-link .nav-link-word-dis {
    visibility:hidden;
 }
 
-.nav-masthead .nav-link:hover .nav-link-word-dis,
-.nav-masthead .nav-link:focus .nav-link-word-dis {
+.nav-link:hover .nav-link-word-dis,
+.nav-link:focus .nav-link-word-dis {
    visibility:visible;
 }
 
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
+nav > ul > li {
+   margin-left: 1rem;
+   margin-right: 1rem;
 }
 
-.nav-masthead .active {
+.active {
   color: #fff;
   border-bottom-color: #fff;
 }
@@ -172,12 +177,11 @@ body {
  */
 
 
-@media (min-width: 40em) {
+@media (min-width: 768px) {
   /* Pull out the header and footer */
-  html, body { overflow: auto; }
   .masthead {
-    position: relative;
-    top: auto;
+    position: fixed;
+    top: 0;
   }
   .mastfoot {
     position: fixed;
@@ -195,15 +199,10 @@ body {
   }
 }
 
-@media (min-width: 62em) {
+@media (min-width: 992px) {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 42rem;
-  }
-
-  .masthead {
-     position: fixed;
-     top: 0;
+    width: 700px;
   }
 }
