--- a/cover.css
+++ b/cover.css
@@ -27,6 +27,12 @@ a:hover {
 html,
 body {
   height: 100%;
+  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+  background-image: url('static/img/diningroom.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   background-color: #333;
 }
 body {
