--- a/css/cover.css
+++ b/css/cover.css
@@ -86,18 +86,10 @@ body {
   font-weight: bold;
   color: rgba(255,255,255,1.0);
   background-color: transparent;
-  border-bottom: .25rem solid transparent;
+  border-bottom: .25rem solid;
+  border-bottom-color: rgba(255,255,255,.25);
   margin: 0 auto;
 }
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255,255,255,.25);
-}
-
-/* .nav-masthead .nav-link + .nav-link { */
-/*   margin-left: 1rem; */
-/* } */
 
 .nav-masthead .active {
   color: #fff;
