--- a/css/cover.css
+++ b/css/cover.css
@@ -1,173 +1,77 @@
-/*
- * Globals
- */
-
-/* Links */
+html,
+body {
+  height: 100%;
+}
+body {
+  background-image: url('../static/img/image15.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+}
 a,
 a:focus,
 a:hover {
   color: #fff;
 }
-
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
-}
-
-
-/*
- * Base structure
- */
-
-html,
-body {
-  height: 100%;
-  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
-  background-image: url('../static/img/diningroom.jpg');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  background-color: #333;
-}
-body {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
-}
-
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
-          box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
-}
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
-}
-
-/* Padding for spacing */
-.inner {
-  padding: 2rem;
-}
-
-
-.cover-row {
-  margin: 0 auto;
-}
-
-/*
- * Header
- */
-
-.masthead {
-  margin-bottom: 2rem;
-}
-
-.masthead-brand {
-  margin-bottom: 0;
-}
-
-.nav-masthead .nav-link {
-  padding: .25rem 0;
+.nav-link {
   font-weight: bold;
-  color: rgba(255,255,255,1.0);
+  color: rgba(255,255,255,1);
   background-color: transparent;
-  border-bottom: .25rem solid;
-  border-bottom-color: rgba(255,255,255,.25);
-  margin: 0 auto;
+  border-bottom: .25rem solid transparent;
+  border-bottom-color: rgba(255,255,255,.33);
+  padding: 1em 0 0 0;
+  margin: 0 1em;
 }
 
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+.nav-link:hover,
+.nav-link:focus {
+  border-bottom-color: rgba(255,255,255,1);
 }
 
-@media (min-width: 48em) {
-  .masthead-brand {
-    float: left;
-  }
-  /* .nav-masthead { */
-  /*   float: right; */
-  /* } */
+.nav-link .nav-link-word-dis {
+   visibility:hidden;
 }
 
-
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 1.5rem;
+.nav-link:hover .nav-link-word-dis,
+.nav-link:focus .nav-link-word-dis {
+   visibility:visible;
 }
-.cover .btn-lg {
-  padding: .75rem 1.25rem;
-  font-weight: bold;
+.center-block {
+    margin: 0 auto;
+    text-align: center;
 }
-
-
-/*
- * Footer
- */
-
-.mastfoot {
-  color: rgba(255,255,255,.5);
+#content {
+  margin-top: 1.5em;
 }
 
-
-/*
- * Affix and center
- */
-
-@media (max-width: 39em) {
-  #nav-container {
-    padding: 0;
-  }
-  #nav-inner {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575px) {
+  .nav-link {
+    margin: 0 1em;
   }
 }
 
-@media (min-width: 40em) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767px) {
+
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199px) {
+  .footer {
+    margin-top: 3em;
   }
 }
 
-@media (min-width: 62em) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 42rem;
-  }
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
 }
