--- a/css/cover.css
+++ b/css/cover.css
@@ -7,6 +7,9 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   background-color: #464646;
   color: #fff;
@@ -29,13 +32,15 @@ a:focus,
 a:hover {
   color: #fff;
 }
+.navbar > div {
+  padding: 1rem 0;
+}
 .nav-link {
   font-weight: bold;
   color: rgba(255,255,255,1);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
   border-bottom-color: rgba(255,255,255,.33);
-  padding: 1rem 0 0 0;
   margin: 0 1rem;
 }
 
@@ -53,10 +58,22 @@ a:hover {
    visibility:visible;
 }
 .site-wrapper {
+  display: table;
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
   text-align: center;
+}
+.site-wrapper > .container-fluid {
+  display: table-row;
+  height: 0;
+}
+.site-wrapper > .container-fluid > row > div.col-4 {
+  display: table-cell;
+  height: 0;
+}
+.site-wrapper > .container-fluid.fill {
+  height: auto;
 }
 
 
@@ -66,19 +83,15 @@ a:hover {
   margin-right: auto;
 }
 
-#navbar-container {
-  padding: 0;
-  margin: 0;
-  width: 100%;
-}
-
 #header {
-  padding: 1rem 1rem;
+  padding: 1rem 0rem;
 }
 
 .meta {
-  padding: 1rem 3rem;
   font-weight: 600;
+}
+.meta.row {
+  padding: 0 1rem;
 }
 
 /* .navbar-toggler { */
@@ -109,23 +122,23 @@ a:hover {
   .nav-link {
     margin: 0 .3rem;
   }
-  .meta {
+  .meta.row.justify-content-center {
     text-align: center;
   }
-  .meta.justify-content-end {
+  .meta.row.justify-content-end {
     display: none;
   }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  .meta {
-    text-align: right;
-  }
-  .meta.justify-content-center {
+  .meta.row.justify-content-center {
     display: none;
   }
-
+  .meta.row.justify-content-end {
+    margin: 0 15px;
+    text-align: right;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
