--- a/css/other.css
+++ b/css/other.css
@@ -3,21 +3,6 @@ body {
   height: 100%;
 }
 
-body {
-  background: url('../static/img/image10.JPG');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-color: #464646;
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
-}
-
 body:before {
   content: '';
   position: fixed;
@@ -50,20 +35,8 @@ a:hover {
   border-bottom-color: rgba(255,255,255,1);
 }
 
-.site-wrapper.container-fluid {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  text-align: center;
-}
-
 .nav-word {
   font-weight: bold;
-}
-
-#navigation {
-  padding: 25px 15px;
 }
 
 #meta {
@@ -72,8 +45,28 @@ a:hover {
 
 /* less than 767 px wide */
 @media screen and (max-width: 767px) {
+  body {
+    background: url('../static/img/door-sm.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-color: #464646;
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+  }
   #navigation > .col-lg-auto {
     margin: 0 auto;
+  }
+  #navigation {
+    padding: 0px 15px;
+  }
+  #logo-column {
+    display: none;
   }
   #meta {
     text-align: center;
@@ -84,12 +77,40 @@ a:hover {
   .nav-word {
     font-weight: lighter;
   }
+  .site-wrapper.container-fluid {
+    display: table;
+    width: 100%;
+    height: 100%; /* For at least Firefox */
+    min-height: 100%;
+    text-align: center;
+    background: rgba(0,0,0,0.35);
+  }
 }
 
 /* more than 768px wide */
 @media screen and (min-width: 768px) {
+  body {
+    background: url('../static/img/porch.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-color: #464646;
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
+  }
   #navigation > .col-lg-auto {
     margin: 0 0;
+  }
+  #navigation {
+    padding: 25px 15px;
+  }
+  #logo-column {
+    display: inline;
   }
   #meta {
     text-align: right;
@@ -99,5 +120,13 @@ a:hover {
   }
   .nav-word {
     font-weight: bold;
+  }
+  .site-wrapper.container-fluid {
+    display: table;
+    width: 100%;
+    height: 100%; /* For at least Firefox */
+    min-height: 100%;
+    text-align: center;
+    background: rgba(0,0,0,0.15);
   }
 }
